# ColorIt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
color_proc/: BlendPixel.hpp  CMakeLists.txt  ColorBlender.cpp  ColorBlender.hpp
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  RasterLabel.cpp  RasterLabel.hpp  ui_mainwindow.hpp
